tests/negative/lexer/string_byte2.orng
// string_byte2.orng:6:18: error: 'Z' is not a valid hexadecimal digit
//     let x = "\x0Z" // This is invalid because the second character of 0Z is not a valid hex digit
//                 ^
// 
fn main() -> Int {
    let x = "\x0Z" // This is invalid because the second character of 0Z is not a valid hex digit
    0
}